logs/Slang/generated/hdlconv/hdlconvertor_p566.sv.log
name: hdlconvertor_p566
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p566.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p566.sv:1:1: error: language feature not yet supported
covergroup sg @(posedge clk);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p566.sv:4:19: error: expected expression
    bins b2 = (2 [-> 3:5] );
                  ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p566.sv:5:18: error: expected expression
    bins b3 = (3[-> 3:5] );
                 ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p566.sv:6:19: error: expected expression
    bins b5 = (5 [* 3] );
                  ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p566.sv:7:24: error: expected expression
    bins b6 = (1 => 2 [= 3:6] => 5);
                       ^
